# FL-practice

./: CMakeLists.txt  EarleyParser.cpp  EarleyParser.h  README.md  Situation.h  main.cpp  tests.cpp
googletest/: googletest-distribution.cbp
googletest/googlemock/: gmock.cbp
